@@ -51,6 +51,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
+import java.util.function.Function;
 
 /**
  * Factory of {@link TaskDeploymentDescriptor} to deploy {@link
@@ -64,7 +65,9 @@ public class TaskDeploymentDescriptorFactory {
     private final JobID jobID;
     private final PartitionLocationConstraint partitionDeploymentConstraint;
     private final int subtaskIndex;
-    private final List<List<IntermediateResultPartition>> consumedPartitions;
+    private final List<ConsumedPartitionGroup> consumedPartitionGroups;
+    private final Function<IntermediateResultPartitionID, IntermediateResultPartition>
+            resultPartitionRetriever;
 
     private TaskDeploymentDescriptorFactory(
             ExecutionAttemptID executionId,
@@ -74,7 +77,9 @@ public class TaskDeploymentDescriptorFactory {
             JobID jobID,
             PartitionLocationConstraint partitionDeploymentConstraint,
             int subtaskIndex,
-            List<List<IntermediateResultPartition>> consumedPartitions) {
+            List<ConsumedPartitionGroup> consumedPartitionGroups,
+            Function<IntermediateResultPartitionID, IntermediateResultPartition>
+                    resultPartitionRetriever) {
         this.executionId = executionId;
         this.attemptNumber = attemptNumber;
         this.serializedJobInformation = serializedJobInformation;
@@ -82,7 +87,8 @@ public class TaskDeploymentDescriptorFactory {
         this.jobID = jobID;
         this.partitionDeploymentConstraint = partitionDeploymentConstraint;
         this.subtaskIndex = subtaskIndex;
-        this.consumedPartitions = consumedPartitions;
+        this.consumedPartitionGroups = consumedPartitionGroups;
+        this.resultPartitionRetriever = resultPartitionRetriever;
     }
 
     public TaskDeploymentDescriptor createDeploymentDescriptor(
@@ -103,13 +109,15 @@ public class TaskDeploymentDescriptorFactory {
     }
 
     private List<InputGateDeploymentDescriptor> createInputGateDeploymentDescriptors() {
-        List<InputGateDeploymentDescriptor> inputGates = new ArrayList<>(consumedPartitions.size());
+        List<InputGateDeploymentDescriptor> inputGates =
+                new ArrayList<>(consumedPartitionGroups.size());
 
-        for (List<IntermediateResultPartition> partitions : consumedPartitions) {
+        for (ConsumedPartitionGroup consumedPartitionGroup : consumedPartitionGroups) {
             // If the produced partition has multiple consumers registered, we
             // need to request the one matching our sub task index.
             // TODO Refactor after removing the consumers from the intermediate result partitions
-            IntermediateResultPartition resultPartition = partitions.get(0);
+            IntermediateResultPartition resultPartition =
+                    resultPartitionRetriever.apply(consumedPartitionGroup.getFirst());
 
             int numConsumers = resultPartition.getConsumerVertexGroups().get(0).size();
 
@@ -123,21 +131,24 @@ public class TaskDeploymentDescriptorFactory {
                             resultId,
                             partitionType,
                             queueToRequest,
-                            getConsumedPartitionShuffleDescriptors(partitions)));
+                            getConsumedPartitionShuffleDescriptors(consumedPartitionGroup)));
         }
 
         return inputGates;
     }
 
     private ShuffleDescriptor[] getConsumedPartitionShuffleDescriptors(
-            List<IntermediateResultPartition> partitions) {
+            ConsumedPartitionGroup consumedPartitionGroup) {
 
-        ShuffleDescriptor[] shuffleDescriptors = new ShuffleDescriptor[partitions.size()];
+        ShuffleDescriptor[] shuffleDescriptors =
+                new ShuffleDescriptor[consumedPartitionGroup.size()];
         // Each edge is connected to a different result partition
-        for (int i = 0; i < partitions.size(); i++) {
-            shuffleDescriptors[i] =
+        int i = 0;
+        for (IntermediateResultPartitionID partitionId : consumedPartitionGroup) {
+            shuffleDescriptors[i++] =
                     getConsumedPartitionShuffleDescriptor(
-                            partitions.get(i), partitionDeploymentConstraint);
+                            resultPartitionRetriever.apply(partitionId),
+                            partitionDeploymentConstraint);
         }
         return shuffleDescriptors;
     }
@@ -146,18 +157,6 @@ public class TaskDeploymentDescriptorFactory {
             ExecutionVertex executionVertex, int attemptNumber) throws IOException {
         InternalExecutionGraphAccessor internalExecutionGraphAccessor =
                 executionVertex.getExecutionGraphAccessor();
-
-        final List<List<IntermediateResultPartition>> consumedPartitions = new ArrayList<>();
-
-        for (ConsumedPartitionGroup partitionGroup :
-                executionVertex.getAllConsumedPartitionGroups()) {
-            List<IntermediateResultPartition> partitions = new ArrayList<>();
-            for (IntermediateResultPartitionID partitionId : partitionGroup) {
-                partitions.add(
-                        internalExecutionGraphAccessor.getResultPartitionOrThrow(partitionId));
-            }
-            consumedPartitions.add(partitions);
-        }
 
         return new TaskDeploymentDescriptorFactory(
                 executionVertex.getCurrentExecutionAttempt().getAttemptId(),
@@ -168,7 +167,8 @@ public class TaskDeploymentDescriptorFactory {
                 internalExecutionGraphAccessor.getJobID(),
                 internalExecutionGraphAccessor.getPartitionLocationConstraint(),
                 executionVertex.getParallelSubtaskIndex(),
-                consumedPartitions);
+                executionVertex.getAllConsumedPartitionGroups(),
+                internalExecutionGraphAccessor::getResultPartitionOrThrow);
     }
 
     private static MaybeOffloaded<JobInformation> getSerializedJobInformation(
